 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 2
============

* [cdunde]: Added ability to clear all selections by a single LMB click in any open area of a Model Editor's view.

* [cdunde]: Fixed menu items that were not interacting with their config settings in the Defaults.qrk file.

* [cdunde]: Updated addon, also new game pak on QuArK site. Don't know who did them for NEXUIZ.

* [cdunde/DanielPharos]: New function added to the Model Editor tree-view RMB to save a skin when one is selected.

* [cdunde]: Added 3D view modes to Options menu to allow viewing through objects for scenes.

* [cdunde/DanielPharos]: Added new .md2 exporter with progress bar and logging capabilities.

* [cdunde/DanielPharos]: Added new function "Match Frame Count" to the Commands & RMB menus
          - which duplicates the number of frames in selected components.

* [cdunde]: Added option for error checking of selected components before exporting.

* [cdunde/DanielPharos]: Setup of Specifics\Arg page for model types data and settings.

* [Danielpharos/cdunde]: Fix the model groups icons not working, and now the model component
          - icon changes to an X when you hide the component.

* [cdunde]: Added new entity line drawing features by X7.

* [cdunde]: Updates, additions and a new mod addon by X7 for Quake 2.

* [cdunde/DanielPharos]: Added .lwo lightwave model export support and improved the importer.

* [cdunde/DanielPharos]: To add lwo model importer, uv's still not correct though.
          - Also added model import\export logging options for file types.

* [cdunde]: Setup new QuArK Model Editor Python model import export system.
