@@ -15,6 +15,8 @@ $Id$
 6.6.0 Beta 2
 ============
 
+* [DanielPharos]: Added a single-instance check to check that only one QuArK is running at once.
+
 * [cdunde]: Added ability to clear all selections by a single LMB click in any open area of a Model Editor's view.
 
 * [cdunde]: Fixed menu items that were not interacting with their config settings in the Defaults.qrk file.
